--- a/css/common.css
+++ b/css/common.css
@@ -217,13 +217,6 @@ img {
   height: 4px;
   background: var(--accent-color);
   border-radius: 2px;
-  opacity: 0;
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.current-link:hover::after {
-  opacity: 1;
 }
 
 .contact-nav {
@@ -280,11 +273,13 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mail:hover .icon-envelope {
+.mail:hover .icon-envelope,
+.mail:focus .icon-envelope {
   fill: var(--accent-color);
 }
 
-.tel:hover .icon-smartphone {
+.tel:hover .icon-smartphone,
+.tel:focus .icon-smartphone {
   fill: var(--accent-color);
 }
 /* FOOTER */
