--- a/css/main.css
+++ b/css/main.css
@@ -175,13 +175,6 @@ html {
   background-color: rgba(47, 48, 58, 0.8);
   width: 100%;
   height: 70px;
-  opacity: 0;
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.work-list-thumb:hover .text {
-  opacity: 1;
 }
 
 .works-section {
@@ -358,6 +351,16 @@ html {
   border-radius: 4px;
 }
 
+.modal-title {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
 .modal-close {
   position: absolute;
   top: 8px;
@@ -385,4 +388,136 @@ html {
 
 .modal-close:hover .modal-close-icon {
   fill: var(--accent-color);
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+}
+
+.modal-submit-button {
+  align-self: center;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 200px;
+  height: 50px;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 1px solid transparent;
+  cursor: pointer;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-align: center;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-submit-button:focus,
+.modal-submit-button:hover {
+  background-color: rgba(24, 140, 232, 1);
+}
+
+.label {
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.label::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-input {
+  position: relative;
+  display: block;
+  margin-top: 4px;
+  margin-bottom: 10px;
+}
+
+.label-input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+}
+
+.label-input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.icon {
+  position: absolute;
+  display: block;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 14px;
+  display: block;
+}
+
+.label-input:focus + .icon {
+  fill: var(--accent-color);
+}
+
+.feedback-input {
+  margin-top: 4px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+}
+
+.feedback-input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.policy-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.label-agree-policy {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.label-agree-policy a {
+  color: var(--accent-color);
+}
+
+.label-agree-policy::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  background-image: url(../images/check.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.agree-policy:checked + .label-agree-policy::before {
+  background-color: var(--accent-color);
+  border: 2px solid var(--accent-color);
 }
