--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -93,7 +93,8 @@ main {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-list-link:hover .thumb-text {
+.projects-list-link:hover .thumb-text,
+.projects-list-link:focus .thumb-text {
   transform: translateY(0%);
 }
 
